/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "Contracts/metering_point_type.proto";

option csharp_namespace = "Energinet.DataHub.MarketParticipant.Application.Contracts";

/*
 * BalanceResponsiblePartiesChange Integration Event.
 *
 * Occurs when a change is received for balance responsible.
 */
message BalanceResponsiblePartiesChanged {

  /*
   * The EIC or GLN identifier of the actor that is energy supplier.
   */
  string energy_supplier_id = 1;

  /*
   * The EIC or GLN identifier of the actor that is balance responsible.
   */
  string balance_responsible_id = 2;

  /*
   * The code of the grid area that the actor got ownership of.
   */
  string grid_area_code = 3;

  /*
   * Change for metering point type.
   */
  MeteringPointType metering_point_type = 4;

  /*
   * A timestamp for when the change is received.
   */
  google.protobuf.Timestamp received = 5;
    
  /*
   * A timestamp for when the change is valid from.
   */
  google.protobuf.Timestamp valid_from = 6;

  /*
   * A timestamp for when the change is valid to.
   */
  google.protobuf.Timestamp valid_to = 7;
}
